--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,12 +12,17 @@
   font-size: 16px;
   align-items: center;
 
+  @media screen and (max-height: 735px) {
+    height: 100%;
+  }
+
   &-bg {
     width: 100%;
     min-height: 437px;
     position: absolute;
     z-index: 2;
     top: 0;
+    object-fit: cover;
   }
 }
 
@@ -34,12 +39,16 @@
   overflow: hidden;
   z-index: 3;
   padding: 0;
-  margin: 0;
+  margin: 32px 24px;
 
   &__image {
     border-radius: 20px;
     width: 100%;
     height: 220px;
+
+    @media screen and (max-width: 420px) {
+      height: 160px;
+    }
 
     img {
       width: 100%;
@@ -52,6 +61,19 @@
     display: flex;
     flex-direction: column;
     padding: 45px 48px 48px;
+
+    @media screen and (max-width: 420px) {
+      padding: 32px 24px 32px;
+    }
+  }
+
+  &__title {
+    text-align: center;
+     margin: 0;
+     font-weight: 900;
+     font-size: 1.75rem;
+     line-height: 2rem;
+     color: #1F2E55;
   }
 
   &__description {
@@ -64,15 +86,6 @@
     line-height: 1.62rem;
     color: #717FA6;
   }
-
-  &__title {
-    text-align: center;
-     margin: 0;
-     font-weight: 900;
-     font-size: 1.75rem;
-     line-height: 2rem;
-     color: #1F2E55;
-   }
 }
 
 .c-plan {
@@ -84,6 +97,10 @@
   justify-content: space-between;
   padding: 25px 24px;
   align-items: center;
+
+  @media screen and (max-width: 420px) {
+    flex-direction: column;
+  }
 
   &__info {
     display: flex;
@@ -107,52 +124,77 @@
     h4 {
       margin: 0;
       font-weight: 900;
-      font-size: 16px;
-      line-height: 21px;
+      font-size: 1rem;
+      line-height: 1.31rem;
       color: #1F2E55;
       padding-bottom: 5px;
     }
 
     span {
       font-weight: 400;
-      font-size: 16px;
-      line-height: 21px;
+      font-size: 1rem;
+      line-height: 1.31rem;
       color: #717FA6;
     }
   }
 
   &__link{
-    font-size: 14px;
-    line-height: 19px;
+    font-size: 0.87rem;
+    line-height: 1.18rem;
     font-weight: 700;
     text-decoration-line: underline;
     color: #382AE1;
+    cursor: pointer;
+    transition: color 0.5s, text-decoration-line 1s;
+    margin: 0;
+
+    @media screen and (max-width: 420px) {
+      margin-left: 20px;
+      margin-top: 10px;
+    }
+
+    &:hover {
+      color: #766CF1;
+      text-decoration-line: none;
+    }
   }
 }
 
 .c-button {
+  letter-spacing: -0.01rem;
+
   &__payment {
     background-color: #382AE1;
     box-shadow: 0px 20px 20px rgba(56, 42, 225, 0.190291);
     border-radius: 11px;
     font-weight: 700;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.94rem;
+    line-height: 1.25rem;
     height: 50px;
     border: 0;
     color: #FFFFFF;
     margin-bottom: 32px;
     cursor: pointer;
+    transition:  background-color 0.5s;
+
+    &:hover {
+      background-color: #766CF1;
+    }
   }
 
   &__cancel {
     background-color: transparent;
     border: 0;
     font-weight: 700;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.94rem;
+    line-height: 1.25rem;
     color: #717FA6;
     cursor: pointer;
+    margin-bottom: 0;
+    transition: color 0.5s;
+
+    &:hover {
+      color: #1F2E55;
+    }
   }
 }
-
